--- a/member.css
+++ b/member.css
@@ -1,6 +1,7 @@
-body{
-    padding-top : 90px;
-    background-color: aliceblue;
+body {
+	background-color: #222222;
+	margin: 0 0 0 0;
+	font-family: Arial;
 }
 h1,h2,h3{
     text-align: center;
@@ -14,13 +15,45 @@ h1,h2,h3{
     border-bottom: 1px solid black;
     padding-bottom : 5px;
 }
+
+#title_area {
+	height: 80px;
+	background-color: #333333;
+	line-height: 80px;
+    align-items: center;
+    text-align: center;
+}
+
+.content_text {
+	color: #FFFFFF;
+}
+#title_text {
+	font-size: 30px;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+.menu_button {
+	font-size: 20px;
+}
+#login_status {
+	float: right;
+	margin-right : 9px;
+}
+
+
+
+
 .logform{
+    margin-top: 45px;
+    margin-left: 7px;
+    margin-right: 7px;
     padding-bottom: 50px;
     -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
 	-moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
 	box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
     background-color: blanchedalmond;
-    
+    text-align: center;
 }
 .row{
     margin : auto;
@@ -42,7 +75,7 @@ h1,h2,h3{
 .loginbtn{
     width : 33.33%;
     height : 50px;
-    margin-left : 33.33%;
+    
     margin-bottom : 10px;
 }
 
@@ -56,7 +89,7 @@ h1,h2,h3{
 
 
 .signupform{
-    padding-bottom: 50px;
+    margin: 45px 7px 0px 7px;
     -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
 	-moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
 	box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
@@ -70,10 +103,10 @@ h1,h2,h3{
     padding-top: 10px;
 }
 .signuplabel{
-    width : 50px;
+    float : left;
+    width : 80px;
     height : 30px;
     margin-right: 5px;
-    text-align: center;
     font-size : 12px;
 }
 .signupbtn{
@@ -82,4 +115,26 @@ h1,h2,h3{
     margin-left : 33.33%;
     margin-bottom : 10px;
     margin-top : 40px;
+}
+
+.content_image {
+	width: 42px;
+	height: 42px;
+	background-repeat: no-repeat;
+	background-position: center; 
+	display: inline-block;
+	margin-left: 10px;
+	line-height: 28px;
+}
+
+.withdrawbtn{
+    width : 33.33%;
+    height : 40px;
+    margin-left : 33.33%;
+    margin-bottom : 10px;
+    margin-top : 40px;
+    font-weight: bold;
+    text-emphasis-color: rgb(245, 93, 93);
+    text-decoration-color: rgb(245, 93, 93);
+    background-color: rgb(254, 165, 110);
 }
