--- a/member.css
+++ b/member.css
@@ -146,3 +146,45 @@ h1,h2,h3{
     color : white;
     font-weight : bold;
 }
+
+.goChating {
+	width: 25%;
+	height: 110px;
+	background-repeat: no-repeat;
+	background-position: center; 
+	display: inline-block;
+	margin-left: 60px;
+    margin-top : 30px;
+	line-height: 28px;
+    text-align: center;
+}
+
+.go_ratingpage{
+    float: right;
+    width : 110px;
+    height : 110px;
+    text-align: center;
+    margin-left : 30px;
+    margin-top : 30px;
+}
+
+
+.start_matching{
+    width : 100%;
+    height : 110px;
+    text-align: center;
+    margin-right : 0px;
+    margin-top : 75px;
+}
+
+
+
+.go_marketing{
+    width : 150px;
+    align-items: center;
+    text-align: center;
+    margin-right : 0px;
+    margin-top : 60px;
+    margin-left : 123px;
+}
+
