--- a/SportsMatching/src/main/webapp/member.css
+++ b/SportsMatching/src/main/webapp/member.css
@@ -188,3 +188,33 @@ h1,h2,h3{
     margin-left : 123px;
 }
 
+
+
+
+.rating-group{
+    width : 300px;
+    height : 150px;
+    margin : auto;
+    padding-top: 10px;
+}
+
+.rating_text{
+	float : left;
+    width : 140px;
+    height : 100px;
+    margin-right: 20px;
+    font-size : 50px;
+}
+
+
+.ratingID{
+    width : 200px;
+    height : 30px;
+    margin-right : 50px;
+}
+
+
+
+
+
+
