--- a/SportsMatching/src/main/webapp/member.css
+++ b/SportsMatching/src/main/webapp/member.css
@@ -148,7 +148,7 @@ h1,h2,h3{
 }
 
 .goChating {
-	width: 25%;
+	width: 80px;
 	height: 110px;
 	background-repeat: no-repeat;
 	background-position: center; 
@@ -183,11 +183,21 @@ h1,h2,h3{
     width : 150px;
     align-items: center;
     text-align: center;
-    margin-right : 0px;
     margin-top : 60px;
-    margin-left : 123px;
+    margin-left : 30px;
+    
+	background-repeat: no-repeat;
+	background-position: center; 
+	display: inline-block;
 }
-
+.go_rankingpage{
+    float: right;
+    width : 110px;
+    height : 110px;
+    text-align: center;
+    margin-left : 30px;
+    margin-top : 30px;
+}
 
 
 
